# QICORE-V4

./: .gitignore  LICENSE  PROJECT_OVERVIEW.md  README.md  check-list.md  claude-code-integration-tutorial.md
app/src/examples/: qiprompt-qiagent-demo.ts  workflow-demo.ts  wrapper-demo.ts
claude-code-experiment/: EXPERIMENT_TASK.md  archive-experiment.sh  package-lock.json  package.json  reset-project.sh
claude-code-experiment/ex1/: EXPERIMENT_INFO.md  package-lock.json  package.json  tsconfig.json
claude-code-experiment/ex1/coverage/: coverage-final.json  index.html
claude-code-experiment/ex12/: EXPERIMENT_INFO.md  tsconfig.json  vitest.config.ts
claude-code-experiment/ex13/: package.json  tsconfig.json  vitest.config.ts
docs/: README.md  SCOPE_UPDATE.md  STAGE_VERIFICATION_REPORT.md  breakthrough-universal-formal-verification.md
docs/api/: orchestra.md
docs/diary/: README.md  new_entry.sh
docs/examples/: README.md
docs/experiment/: haskell-implementation-excellence.md  incremental-tree-traversal-process.md  one-day-ai-consistency-study.md  process-logic-documentation.md  setup-documentation.md  study.py.consistency.1d.md  study.ts.consistency.1d.md
docs/guides/: architecture.md  claude-code-sdk-guide.md  getting-started.md
docs/notes/: 1.md  implementation-summary.md
docs/package/: ts.md
docs/qi/agent/: qi.v4.agent.contracts.md
docs/qi/core/: README.md
docs/setup/: README.md  mathematical-contracts.md  python-environment.md  setup.md
docs/sources/: README.md
docs/sources/agent/: README.md  inst.stage2.design.yaml
docs/sources/formal/: base-component.spec.yaml
docs/sources/guides/: common.md  design.prompt.md  formal.prompt.md  guide.md  impl.hs.prompt.md  impl.prompt.md  impl.py.prompt.md  impl.ts.prompt.md  mathematical-contracts.md  package-research-methodology.md  package-research-to-impl.md  scg.exec.md
docs/sources/impl/: qi.v4.ts.yaml
docs/sources/math/: qi.v4.mathematical.models.md  qi.v4.mathematical.study.guide.md
docs/sources/nl/: qi.v4.class.contracts.md  qi.v4.component.contracts.md  qiprompt.component.contracts.md
env/: README.md  mirrors.sh  setup.sh  verify.sh
essays/: agent-based-software-engineering.md
haskell/: Example.hs  README.md  flake.nix  fourmolu.yaml  qicore-base.cabal  result
haskell/QiCore/: Base.hs
haskell/QiCore/Base/: Error.hs  Result.hs
haskell/dist-newstyle/packagedb/ghc-9.6.4/: package.cache  qicore-base-4.0.0-inplace.conf
haskell/dist-newstyle/packagedb/ghc-9.8.4/: package.cache  qicore-base-4.0.0-inplace.conf
lib/src/qiprompt/: index.ts
papers/: ai-source-code-generation-consistency.md  conference.md  design.process.3.stage.md  design.process.md  evolution.md  key.arguments.md  position.md  technical.report.md
python/: README.md  pyproject.toml  test_core.py
python/.hypothesis/constants/: 01e4a36555b1c83f  1fb0b2af59f2cde1  2631d295b588606e  27fdd39a48cd1644  2ba8c47b2876e06a  31e7ead63e41919f  6287773842336c9f  7c5e44b35720eb5e  7d96bc8f270f15ab  a5ec24b53365a17d  a63db530a715a1ae  a6c4b6f1fdf403c6  b2d3602475cf0094  c701537fd72a0991  da3950f03ce4e6b6  da39a3ee5e6b4b0d  e66eabe43332f9ae  e9e7be9fb5c9ca71
python/.hypothesis/examples/04e6b3400353b141/: 562b27a7b33c151b  5cfbe615e413184e  6a978d5d2e45c57d  b5aa5e6c4ab86e5e
python/.hypothesis/examples/562b27a7b33c151b/: 2c2e1cd17eb729a0  358119632a9239bc  498e646424beb564  517ec92e226c0b74  c1b0f8d0d238561b  f0d4d3cfb9b96dc1
python/.hypothesis/examples/5cfbe615e413184e/: 79cd4a66b16d550d
python/.hypothesis/examples/6a978d5d2e45c57d/: 23af0a809ad13403  8d4d92a7dddc7b62
python/examples/basic/: demo.py
python/src/qicore/: __init__.py
python/src/qicore/application/: __init__.py
python/src/qicore/application/ai/: client.py
python/src/qicore/application/cli/: app.py
python/src/qicore/application/database/: db.py
python/src/qicore/application/http/: __init__.py  client.py
python/src/qicore/application/web/: framework.py
python/src/qicore/base/: __init__.py  error.py  result.py
python/src/qicore/core/: __init__.py  cache.py  configuration.py  logging.py
python/tests/benchmarks/: test_performance.py
python/tests/integration/: test_all_components.py
python/tests/property/: test_mathematical_laws.py
python/tests/unit/base/: test_error.py  test_result.py
python/tests/unit/core/: test_cache.py
python/typescript/: README.md
scripts/: demo-template-selection.js  generate-code.ts  generate-formal-verification.ts
typescript/: biome.json  package.json  simple.test.ts  vitest.config.ts
typescript/agent/: PROJECT_OVERVIEW.md  README.md  biome.json  package.json  tsconfig.json  vitest.config.ts
typescript/agent/.claude/: fake.md  knowledge.md  lib_verification.md
typescript/agent/app/: AGENT_UPGRADE_SUMMARY.md  README.md  ROADMAP.md  TRANSFORMATION_SUMMARY.md  package.json  test-workspace-import.ts  tsconfig.json  vitest.config.ts
typescript/agent/docs/: README.md  testing.md  todo.md
typescript/agent/lib/: package.json  temp-test.ts  test-imports.ts  tsconfig.json  vitest.config.ts
typescript/claude-code/: .gitignore  README.md  biome.json  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
typescript/claude-code/src/: index.ts  test-haskell-generation.ts
typescript/claude-code/tests/: setup.ts
typescript/docs/qi/: claude-code-implementation-guide.md  claude-code-sdk-design.md  ts.md
typescript/lib/: README.md  biome.json  eslint.config.js  package-lock.json  package.json  simple.test.ts  tsconfig.json  vitest.config.ts  vitest.qiprompt.config.ts
typescript/lib/src/: README.md  index.ts  (+1 more)
typescript/mathforge/: COMMIT_MESSAGE.md  README.md  RESEARCH_SUMMARY.md  biome.json  demo-agent.ts  index.ts  package-lock.json  package.json  test-hello.ts  tsconfig.json
typescript/src/: index.ts
typescript/study/: README.md  agent-experiment-process.yaml  biome.json  eslint.config.js  foo  package.json  run-haskell-study.ts  run-study.ts  score-existing-haskell.ts  test-results.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
typescript/tests/: basic.test.ts
(+518 files in other folders)
