[project]
name = "qicore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zhifengzhang-sz", email = "zhifeng.zhang.sz@gmail.com" }
]
requires-python = ">=3.13.5"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
